--- a/doc/VAR1718P2.ipynb
+++ b/doc/VAR1718P2.ipynb
@@ -12,18 +12,193 @@
     "\n",
     "### 1. Descripción de lo que se pretende hacer\n",
     "\n",
+    "En esta práctica teníamos como objetivo hacer un **mapeado 3D** del mapa propuesto. _Turtlebot_ utiliza la cámara **Kinect** para capturar nubes de puntos mientras el robot navega teleoperadamente por la vivienda.\n",
+    "\n",
+    "Conforme va capturando estas nubes de puntos, el robot debe ir alineándolas de tal forma que el conjunto haga el mapeado de la casa en 3D.\n",
+    "\n",
     "\n",
     "\n",
     "### 2. Descripción de cómo se ha realizado la práctica\n",
+    "\n",
+    "Comenzamos iniciando el movimiento del robot para la toma de muestras. Realizamos la captura de t tomas de datos, obteniendo un conjunto **X** = x1, x2, …, xt, donde cada _xi_ es una nube de puntos 3D tomada.\n",
+    "\n",
+    "A partir de aquí, comenzando por la primera toma, extraemos las características o keypoints de _xi_ y de _xi+1_, obteniendo así los conjuntos de características **Ci** y **Ci+1**.\n",
+    "\n",
+    "A continuación, extraemos los descriptores de las características obtenidas y realizamos el matching o emparejamiento de los conjuntos **Ci** y **Ci+1**.\n",
+    "\n",
+    "De realizar el paso anterior, adquirimos un conjunto de correspondencias, el cual hay que filtrar porque no todas son válidas. \n",
+    "\n",
+    "Una vez aplicado el algoritmo que nos permite obtener las correspondencias correctas, obtenemos la matriz de transformación, que siempre será de la primera nube hacia la segunda.\n",
+    "\n",
+    "Aplicamos la matriz de transformación a la nube inicial, alineando así la primera nube a la segunda y almacenamos el resultado. Hacemos la misma operación con el resto del conjunto de entrada.\n",
+    "\n",
+    "Si en algún momento no pudiéramos alinear dos pares de nubes, procederíamos a intentar alinearla a las características globales obtenidas hasta el momento. En caso de que esto tampoco funcionara, se desharía tanto el movimiento del robot como el intento de alinear esta nueva nube.\n",
+    "\n",
+    "Este sería el esquema de lo que hemos realizado:\n",
+    "![alt text](images/algoritmo.png \"Esquema práctica\")\n",
     "\n",
     "\n",
     "\n",
     "### 3. Implementación y código desarrollado\n",
     "\n",
+    "Para la realización de la práctica hemos creado un nodo llamado `navigation`. Aquí se procesa todo el cálculo necesario para la construcción del mapeado 3D de la casa.\n",
+    "\n",
+    "La navegación del robot se hace de manera teleoperada. Para desplazarnos hacia adelante usamos `w`, izquierda `a` y derecha `d`. Por último, `.` para detener el programa.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "    while(nh_.ok()){\n",
+    "        cmd = getchar();\n",
+    "        if(cmd!='w' && cmd!='a' && cmd!='d' && cmd!='.'){\n",
+    "            cout << \"unknown command:\" << cmd << \"\\n\";\n",
+    "            continue;\n",
+    "        }\n",
+    "        base_cmd.linear.x = base_cmd.linear.y = base_cmd.angular.z = 0;\n",
+    "        switch(cmd){\n",
+    "            case 'w':\n",
+    "                base_cmd.linear.x += 0.4;\n",
+    "                capture = true;\n",
+    "                break;\n",
+    "            case 'a':\n",
+    "                base_cmd.angular.z += 0.3;\n",
+    "                capture = true;\n",
+    "                break;\n",
+    "            case 'd':\n",
+    "                base_cmd.angular.z += -0.3;\n",
+    "                capture = true;\n",
+    "                break;\n",
+    "            case '.':\n",
+    "                goto end;\n",
+    "                break;\n",
+    "        }\n",
+    "        ros::spinOnce();\n",
+    "        cmd_vel_pub_.publish(base_cmd);\n",
+    "    }\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    ">Si en algún momento no pudiéramos alinear dos pares de nubes, procederíamos a intentar alinearla a las características globales obtenidas hasta el momento. En caso de que esto tampoco funcionara, se desharía tanto el movimiento del robot como el intento de alinear esta nueva nube.\n",
     "\n",
     "\n",
-    "### 4. Nube de puntos resultado del registro"
+    "\n",
+    "Una vez que capturamos la primera nube (x1) hacemos:\n",
+    "  - Filtrado de puntos para reducir el cómputo --> `filterCloudPoint`.\n",
+    "  - Obtención de las normales para, posteriormente, calcular las características --> `estimateNormals`.\n",
+    "  - Cálculo de los _keypoints_ --> `calculateKeyPoints`.\n",
+    "  - Cálculo de los descriptores de los _keypoints_ --> `calculateFeatures`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "    *visu_pc = *msg;\n",
+    "    pcl::PointCloud<pcl::PointXYZRGB>::Ptr cloud_filtered_last (new pcl::PointCloud<pcl::PointXYZRGB>);\n",
+    "    filterCloudPoint(visu_pc, cloud_filtered_last);\n",
+    "    pcl::PointCloud<pcl::PointNormal>::Ptr cloud_normals_last (new pcl::PointCloud<pcl::PointNormal>);\n",
+    "    estimateNormals(cloud_filtered_last, cloud_normals_last);\n",
+    "    calculateKeyPoints(cloud_filtered_last, cloud_normals_last, keypoints_last);\n",
+    "    calculateFeatures(cloud_filtered_last, keypoints_last, cloud_normals_last, fpfhs_left);\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    ">A partir de aquí, cada vez que capturemos una nube de puntos realizaremos las operaciones explicadas arriba.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Una vez que tenemos tanto Ci como Ci+1 y sus correspondientes descriptores, hacemos el _matching_ de las correspondencias y las filtramos para descartar las incorrectas, obteniendo la matriz de transformación `transformation`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "    // Buscamos las correspondencias\n",
+    "    matchFeatures(fpfhs_global, fpfhs_right, correspondences_global);\n",
+    "\n",
+    "    // Filtramos las correspondencias\n",
+    "    // Obtenemos la matriz de transformación\n",
+    "    Eigen::Matrix4f transformation = correspondencesRejection(keypoints_global, keypoints_right, correspondences_global, correspondencesRejected_global);\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "\n",
+    "A continuación, comprobamos mediante un umbral si las correspondencias **rechazadas** corresponden en un 75% de las correspondencias **totales**. En caso de que el if se cumpla, querrá decir que **no** hemos encontrado similitud entre las dos nubes. Por lo tanto, intentaremos alinear la segunda nube con el conjunto global.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "    if(correspondencesRejected.size() > correspondences.size()/1.25)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "\n",
+    "Volvemos a realizar el los cálculos hasta que obtengamos de nuevo el conjunto de correspondencias totales y rechazadas y comprobamos de nuevo mediante el umbral.\n",
+    "\n",
+    "Si vuelve a cumplirse la condición, significará que tampoco se han encontrado similitudes entre la nube local y la global. Por tanto, como se indica en el caso `b` del _switch_, desharíamos el movimiento del robot y la alineación de esa nube.\n",
+    "\n",
+    "Si los pares de nubes, ya sean 2 locales o local con global, consiguen alinearse, procedemos almacenar el resultado globalmente:\n",
+    "  - Transformamos la nube global `visu_pc` aplicando la matriz de transformación.\n",
+    "  - Sumamos las nubes para apilarlas conjuntamente.\n",
+    "  - Filtramos el resultado para descartar puntos comunes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "    *keypoints_last = *keypoints_right;\n",
+    "    *fpfhs_left = *fpfhs_right;\n",
+    "\n",
+    "    pcl::PointCloud<pcl::PointXYZRGB>::Ptr transformed_cloud_global (new pcl::PointCloud<pcl::PointXYZRGB>);\n",
+    "    pcl::transformPointCloud(*visu_pc, *transformed_cloud_global, transformation);\n",
+    "\n",
+    "    *visu_pc = *transformed_cloud_global + *cloud_filtered_right;\n",
+    "\n",
+    "    pcl::PointCloud<pcl::PointXYZRGB>::Ptr filtrado_global (new pcl::PointCloud<pcl::PointXYZRGB>);\n",
+    "    filterCloudPoint(visu_pc, filtrado_global);\n",
+    "    cout << \"Done Global\" << endl;\n",
+    "    visu_pc = filtrado_global;\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "##### Parte optativa\n",
+    "\n",
+    "Cuando se capturan nubes de puntos, no siempre todos los puntos son válidos. A veces hay ruido en los datos o algunos puntos, pese a ser correctos, no aportan información de forma conjunta al resto. Esto puede complicar el extraer información local, en nuestro caso, normales.\n",
+    "\n",
+    "Puede llevar a casos en el que el registro de nubes falle o no sea preciso. Usando **SOR**, podemos eliminar esos puntos, comparándolo con sus vecinos más cercanos y eliminando aquellos que no cumplen un cierto criterio, en nuestro caso, la distancia.\n",
+    "\n",
+    "En el pto. 4 se indican los distintos parámetros que se usaron.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 4. Nube de puntos resultado del registro\n",
+    "\n",
+    "Tras la aplicación del algoritmo descrito a unas 90 nubes de puntos de la casa, obtenemos el siguiente resultado:\n",
+    "\n",
+    "![alt text](images/sinSor.gif \"Resultado sin usar SOR\")\n",
+    "\n",
+    "El tiempo de computo para este registro es de **189.61 segundos** obteniendo una nube compuesta de **122.435 puntos**.\n",
+    "\n",
+    "Aplicando el algoritmo **SOR** (Statistical Outlier Removal) a las nubes capturadas, después del filtrado, obtenemos un resultado mucho más satisfactorio.\n",
+    "![alt text](images/conSor.gif \"Resultado usando SOR\")\n",
+    "\n",
+    "Además de obtener una mejor reconstrucción, al eliminar puntos no significantes con **SOR**, el tiempo de cálculo es significativamente menor: **169.845 segundos**. Se obtiene una cantidad de puntos menor del modelo total, **115.105**.\n",
+    "\n",
+    "Hacemos uso del algoritmo **SOR**, utilizando una búsqueda de 100 puntos más cercanos y con un valor de distacia máximo de 0.25 cm.\n",
+    "\n",
+    "Hemos realizado también pruebas con diferentes combinaciones de valores (10 y 0.25, 100 y  0.25, 100 y 0.30, 100 y 0.50, 300 y 0.25, 50 y 0.25, 50 y 0.50) pero los resultados obtenidos eran malos o al menos no tan buenos como los obtenidos con los parámetros finales."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
