--- a/doc/VAR1718P2.ipynb
+++ b/doc/VAR1718P2.ipynb
@@ -10,11 +10,13 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "### 1. Descripción de lo que se pretende hacer\n",
     "\n",
     "En esta práctica teníamos como objetivo hacer un **mapeado 3D** del mapa propuesto. _Turtlebot_ utiliza la cámara **Kinect** para capturar nubes de puntos mientras el robot navega teleoperadamente por la vivienda.\n",
     "\n",
     "Conforme va capturando estas nubes de puntos, el robot debe ir alineándolas de tal forma que el conjunto haga el mapeado de la casa en 3D.\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -35,7 +37,10 @@
     "Si en algún momento no pudiéramos alinear dos pares de nubes, procederíamos a intentar alinearla a las características globales obtenidas hasta el momento. En caso de que esto tampoco funcionara, se desharía tanto el movimiento del robot como el intento de alinear esta nueva nube.\n",
     "\n",
     "Este sería el esquema de lo que hemos realizado:\n",
+    "\n",
+    "\n",
     "![alt text](images/algoritmo.png \"Esquema práctica\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -48,6 +53,7 @@
     "---\n",
     "\n",
     "```cpp\n",
+    "\n",
     "    while(nh_.ok()){\n",
     "        cmd = getchar();\n",
     "        if(cmd!='w' && cmd!='a' && cmd!='d' && cmd!='.'){\n",
@@ -75,6 +81,7 @@
     "        ros::spinOnce();\n",
     "        cmd_vel_pub_.publish(base_cmd);\n",
     "    }\n",
+    "\n",
     "```\n",
     "\n",
     "---\n",
@@ -92,6 +99,7 @@
     "---\n",
     "\n",
     "```cpp\n",
+    "\n",
     "    *visu_pc = *msg;\n",
     "    pcl::PointCloud<pcl::PointXYZRGB>::Ptr cloud_filtered_last (new pcl::PointCloud<pcl::PointXYZRGB>);\n",
     "    filterCloudPoint(visu_pc, cloud_filtered_last);\n",
@@ -99,6 +107,7 @@
     "    estimateNormals(cloud_filtered_last, cloud_normals_last);\n",
     "    calculateKeyPoints(cloud_filtered_last, cloud_normals_last, keypoints_last);\n",
     "    calculateFeatures(cloud_filtered_last, keypoints_last, cloud_normals_last, fpfhs_left);\n",
+    "\n",
     "```\n",
     "\n",
     "---\n",
@@ -112,12 +121,14 @@
     "---\n",
     "\n",
     "```cpp\n",
+    "\n",
     "    // Buscamos las correspondencias\n",
     "    matchFeatures(fpfhs_global, fpfhs_right, correspondences_global);\n",
     "\n",
     "    // Filtramos las correspondencias\n",
     "    // Obtenemos la matriz de transformación\n",
     "    Eigen::Matrix4f transformation = correspondencesRejection(keypoints_global, keypoints_right, correspondences_global, correspondencesRejected_global);\n",
+    "\n",
     "```\n",
     "\n",
     "---\n",
@@ -129,7 +140,9 @@
     "---\n",
     "\n",
     "```cpp\n",
-    "    if(correspondencesRejected.size() > correspondences.size()/1.25)\n",
+    "\n",
+    "    if(correspondencesRejected.size() > correspondences.size()/1.25){...}\n",
+    "    \n",
     "```\n",
     "\n",
     "---\n",
@@ -148,6 +161,7 @@
     "---\n",
     "\n",
     "```cpp\n",
+    "\n",
     "    *keypoints_last = *keypoints_right;\n",
     "    *fpfhs_left = *fpfhs_right;\n",
     "\n",
@@ -160,9 +174,11 @@
     "    filterCloudPoint(visu_pc, filtrado_global);\n",
     "    cout << \"Done Global\" << endl;\n",
     "    visu_pc = filtrado_global;\n",
+    "\n",
     "```\n",
     "\n",
     "---\n",
+    "\n",
     "\n",
     "\n",
     "##### Parte optativa\n",
@@ -171,7 +187,58 @@
     "\n",
     "Puede llevar a casos en el que el registro de nubes falle o no sea preciso. Usando **SOR**, podemos eliminar esos puntos, comparándolo con sus vecinos más cercanos y eliminando aquellos que no cumplen un cierto criterio, en nuestro caso, la distancia.\n",
     "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "\n",
+    "    void filterSor(pcl::PointCloud<pcl::PointXYZRGB>::Ptr& cloud, pcl::PointCloud<pcl::PointXYZRGB>::Ptr& cloud_filtered){\n",
+    "\n",
+    "        pcl::StatisticalOutlierRemoval<pcl::PointXYZRGB> sor;\n",
+    "        sor.setInputCloud (cloud);\n",
+    "        sor.setMeanK (100); // Probar valores\n",
+    "        sor.setStddevMulThresh (0.25); //Probar valores\n",
+    "        sor.filter (*cloud_filtered);\n",
+    "    }\n",
+    "\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    ">Función para filtrar las nubes de puntos aplicando SOR.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "```cpp\n",
+    "\n",
+    "    // Filtramos los puntos\n",
+    "    filterCloudPoint(msgP, cloud_filtered_right);\n",
+    "\n",
+    "    // Aplicamos Sor\n",
+    "    filterSor(cloud_filtered_right, cloud_filtered_sor_right);\n",
+    "\n",
+    "    // Conseguimos las normales\n",
+    "    estimateNormals(cloud_filtered_sor_right, cloud_normals_right);\n",
+    "\n",
+    "    // Sacamos puntos característicos\n",
+    "    calculateKeyPoints(cloud_filtered_sor_right, cloud_normals_right, keypoints_right);\n",
+    "\n",
+    "    // Calculamos features de los keypoints\t\t\n",
+    "    calculateFeatures(cloud_filtered_sor_right, keypoints_right, cloud_normals_right, fpfhs_right);\n",
+    "\n",
+    "    // Buscamos las correspondencias\n",
+    "    matchFeatures(fpfhs_left, fpfhs_right, correspondences);\n",
+    "\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    ">Añadimos después del filtrado de puntos el filtrado por SOR para reducir el tiempo de cómputo y mejorar el resultado.\n",
+    "\n",
+    "\n",
+    "\n",
     "En el pto. 4 se indican los distintos parámetros que se usaron.\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -179,26 +246,24 @@
     "\n",
     "Tras la aplicación del algoritmo descrito a unas 90 nubes de puntos de la casa, obtenemos el siguiente resultado:\n",
     "\n",
+    "\n",
     "![alt text](images/sinSor.gif \"Resultado sin usar SOR\")\n",
+    "\n",
     "\n",
     "El tiempo de computo para este registro es de **189.61 segundos** obteniendo una nube compuesta de **122.435 puntos**.\n",
     "\n",
     "Aplicando el algoritmo **SOR** (Statistical Outlier Removal) a las nubes capturadas, después del filtrado, obtenemos un resultado mucho más satisfactorio.\n",
+    "\n",
+    "\n",
     "![alt text](images/conSor.gif \"Resultado usando SOR\")\n",
+    "\n",
     "\n",
     "Además de obtener una mejor reconstrucción, al eliminar puntos no significantes con **SOR**, el tiempo de cálculo es significativamente menor: **169.845 segundos**. Se obtiene una cantidad de puntos menor del modelo total, **115.105**.\n",
     "\n",
     "Hacemos uso del algoritmo **SOR**, utilizando una búsqueda de 100 puntos más cercanos y con un valor de distacia máximo de 0.25 cm.\n",
     "\n",
-    "Hemos realizado también pruebas con diferentes combinaciones de valores (10 y 0.25, 100 y  0.25, 100 y 0.30, 100 y 0.50, 300 y 0.25, 50 y 0.25, 50 y 0.50) pero los resultados obtenidos eran malos o al menos no tan buenos como los obtenidos con los parámetros finales."
+    "Hemos realizado también pruebas con diferentes combinaciones de valores (_10_ y _0.25_, _100_ y  _0.25_, _100_ y _0.30_, _100_ y _0.50_, _300_ y _0.25_, _50_ y _0.25_, _50_ y _0.50_) pero los resultados obtenidos eran malos o al menos no tan buenos como los obtenidos con los parámetros finales."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
