--- a/doc/VAR1718P2.ipynb
+++ b/doc/VAR1718P2.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "### 2. Descripción de cómo se ha realizado la práctica\n",
     "\n",
-    "Comenzamos iniciando el movimiento del robot para la toma de muestras. Realizamos la captura de t tomas de datos, obteniendo un conjunto **X** = x1, x2, …, xt, donde cada _xi_ es una nube de puntos 3D tomada.\n",
+    "Conforme el robot se va moviendo por la vivienda se van realizando las capturas de tomas de datos, obteniendo conjuntos **X** = x1, x2, …, xt, donde cada _xi_ es una nube de puntos 3D tomada.\n",
     "\n",
     "A partir de aquí, comenzando por la primera toma, extraemos las características o keypoints de _xi_ y de _xi+1_, obteniendo así los conjuntos de características **Ci** y **Ci+1**.\n",
     "\n",
