Documentación en formato .md

--- a/doc/VAR1718P2.ipynb
+++ b/doc/VAR1718P2.ipynb
@@ -92,6 +92,7 @@
     "\n",
     "Una vez que capturamos la primera nube (x1) hacemos:\n",
     "  - Filtrado de puntos para reducir el cómputo --> `filterCloudPoint`.\n",
+    "  - Filtrado de puntos con SOR --> `filterSor`.\n",
     "  - Obtención de las normales para, posteriormente, calcular las características --> `estimateNormals`.\n",
     "  - Cálculo de los _keypoints_ --> `calculateKeyPoints`.\n",
     "  - Cálculo de los descriptores de los _keypoints_ --> `calculateFeatures`.\n",
@@ -101,19 +102,24 @@
     "```cpp\n",
     "\n",
     "    *visu_pc = *msg;\n",
+    "\t\t\t\n",
     "    pcl::PointCloud<pcl::PointXYZRGB>::Ptr cloud_filtered_last (new pcl::PointCloud<pcl::PointXYZRGB>);\n",
     "    filterCloudPoint(visu_pc, cloud_filtered_last);\n",
+    "\n",
+    "    pcl::PointCloud<pcl::PointXYZRGB>::Ptr cloud_filtered_sor_last (new pcl::PointCloud<pcl::PointXYZRGB>);\n",
+    "    filterSor(cloud_filtered_last, cloud_filtered_sor_last);\n",
+    "\n",
     "    pcl::PointCloud<pcl::PointNormal>::Ptr cloud_normals_last (new pcl::PointCloud<pcl::PointNormal>);\n",
-    "    estimateNormals(cloud_filtered_last, cloud_normals_last);\n",
-    "    calculateKeyPoints(cloud_filtered_last, cloud_normals_last, keypoints_last);\n",
-    "    calculateFeatures(cloud_filtered_last, keypoints_last, cloud_normals_last, fpfhs_left);\n",
+    "    estimateNormals(cloud_filtered_sor_last, cloud_normals_last);\n",
+    "\n",
+    "    calculateKeyPoints(cloud_filtered_sor_last, cloud_normals_last, keypoints_last);\n",
+    "    calculateFeatures(cloud_filtered_sor_last, keypoints_last, cloud_normals_last, fpfhs_left);\n",
     "\n",
     "```\n",
     "\n",
     "---\n",
     "\n",
     ">A partir de aquí, cada vez que capturemos una nube de puntos realizaremos las operaciones explicadas arriba.\n",
-    "\n",
     "\n",
     "\n",
     "Una vez que tenemos tanto Ci como Ci+1 y sus correspondientes descriptores, hacemos el _matching_ de las correspondencias y las filtramos para descartar las incorrectas, obteniendo la matriz de transformación `transformation`.\n",
@@ -135,7 +141,7 @@
     "\n",
     "\n",
     "\n",
-    "A continuación, comprobamos mediante un umbral si las correspondencias **rechazadas** corresponden en un 75% de las correspondencias **totales**. En caso de que el if se cumpla, querrá decir que **no** hemos encontrado similitud entre las dos nubes. Por lo tanto, intentaremos alinear la segunda nube con el conjunto global.\n",
+    "A continuación, comprobamos mediante un umbral si las correspondencias **rechazadas** corresponden en un 80% de las correspondencias **totales**. En caso de que el if se cumpla, querrá decir que **no** hemos encontrado similitud entre las dos nubes. Por lo tanto, intentaremos alinear la segunda nube con el conjunto global.\n",
     "\n",
     "---\n",
     "\n",
@@ -151,7 +157,7 @@
     "\n",
     "Volvemos a realizar el los cálculos hasta que obtengamos de nuevo el conjunto de correspondencias totales y rechazadas y comprobamos de nuevo mediante el umbral.\n",
     "\n",
-    "Si vuelve a cumplirse la condición, significará que tampoco se han encontrado similitudes entre la nube local y la global. Por tanto, como se indica en el caso `b` del _switch_, desharíamos el movimiento del robot y la alineación de esa nube.\n",
+    "Si vuelve a cumplirse la condición, significará que tampoco se han encontrado similitudes entre la nube local y la global. Por tanto, desharíamos el movimiento del robot y la alineación de esa nube.\n",
     "\n",
     "Si los pares de nubes, ya sean 2 locales o local con global, consiguen alinearse, procedemos almacenar el resultado globalmente:\n",
     "  - Transformamos la nube global `visu_pc` aplicando la matriz de transformación.\n",
@@ -178,6 +184,14 @@
     "```\n",
     "\n",
     "---\n",
+    "\n",
+    "\n",
+    "Se ha usado para:\n",
+    " - filtarado --> **Voxel Grid** (_leaf size 0.25_)\n",
+    " - keypoints --> **Sift**\n",
+    " - descriptores --> **fpfh**\n",
+    " - matching --> **CorrespondeceEstimator** \n",
+    " - detector de correspondencias falsas --> **RANSAC**\n",
     "\n",
     "\n",
     "\n",
@@ -264,6 +278,13 @@
     "\n",
     "Hemos realizado también pruebas con diferentes combinaciones de valores (_10_ y _0.25_, _100_ y  _0.25_, _100_ y _0.30_, _100_ y _0.50_, _300_ y _0.25_, _50_ y _0.25_, _50_ y _0.50_) pero los resultados obtenidos eran malos o al menos no tan buenos como los obtenidos con los parámetros finales."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
